--- a/OneDrive/Έγγραφα/NetBeansProjects/Authentication/pom.xml
+++ b/OneDrive/Έγγραφα/NetBeansProjects/Authentication/pom.xml
@@ -24,9 +24,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.23</version> <!-- Use the version that matches your MySQL server version -->
+            <version>8.0.23</version> 
         </dependency>
-
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
