--- a/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/pom.xml
+++ b/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/pom.xml
@@ -94,6 +94,16 @@
 	    <version>6.1.0-M1</version>
 	    <scope>provided</scope>
 	</dependency>
+	<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.10.1</version>
+		</dependency>
+		<dependency>
+  			<groupId>junit</groupId>
+  			<artifactId>junit</artifactId>
+  			<version>4.13.2</version>
+</dependency>
 
         
     </dependencies>
