Some bug fixing

--- a/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/src/main/resources/hibernate.properties
+++ b/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/src/main/resources/hibernate.properties
@@ -5,7 +5,7 @@ hibernate.connection.password=
 hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
 
 # Echo all executed SQL to console
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.format_sql=true
 hibernate.highlight_sql=true
 
