--- a/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/src/main/webapp/WEB-INF/web.xml
+++ b/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,8 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>gr.conference.usersys</param-value>
+            <param-value>gr.conference.usersys;gr.conference.confsys</param-value>
+          
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
