--- a/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/src/main/resources/hibernate.properties
+++ b/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/src/main/resources/hibernate.properties
@@ -6,8 +6,8 @@ hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
 
 # Echo all executed SQL to console
 hibernate.show_sql=false
-hibernate.format_sql=true
-hibernate.highlight_sql=true
+hibernate.format_sql=false
+hibernate.highlight_sql=false
 
 # Automatically export the schema
 hibernate.hbm2ddl.auto=update
