--- a/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/src/main/resources/hibernate.properties
+++ b/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/src/main/resources/hibernate.properties
@@ -1,15 +1,25 @@
 # Database connection settings
 hibernate.connection.url=jdbc:mysql://localhost:3306/authentication?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
 hibernate.connection.username=root
-hibernate.connection.password=
+hibernate.connection.password=your_password_here
 hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
 
-# Echo all executed SQL to console
-hibernate.show_sql=false
-hibernate.format_sql=false
-hibernate.highlight_sql=false
+# Show SQL and format it for better readability
+hibernate.show_sql=true
+hibernate.format_sql=true
+hibernate.highlight_sql=true
 
-# Automatically export the schema
+# Automatically update the database schema based on your entity classes
 hibernate.hbm2ddl.auto=update
 
+# Use thread-bound sessions
 hibernate.current_session_context_class=thread
+
+# C3P0 Connection pool settings
+hibernate.c3p0.min_size=5           # Minimum number of connections in the pool
+hibernate.c3p0.max_size=20          # Maximum number of connections in the pool
+hibernate.c3p0.timeout=300          # Idle connections removed after 300 seconds
+hibernate.c3p0.max_statements=50    # Statement cache size
+hibernate.c3p0.idle_test_period=3000  # Test idle connections every 3000 seconds
+hibernate.c3p0.acquire_increment=2  # Number of connections acquired when the pool is exhausted
+hibernate.c3p0.max_idle_time=600    # Maximum idle time before a connection is closed
