--- a/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/src/main/resources/hibernate.properties
+++ b/OneDrive/Desktop/5th Semester/Soft. Eng/final/sys/src/main/resources/hibernate.properties
@@ -4,22 +4,20 @@ hibernate.connection.username=root
 hibernate.connection.password=your_password_here
 hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
 
-# Show SQL and format it for better readability
-hibernate.show_sql=true
-hibernate.format_sql=true
-hibernate.highlight_sql=true
+# Disable SQL logging and set proper log levels
+hibernate.show_sql=false
+hibernate.format_sql=false
+org.hibernate.SQL=off
+org.hibernate.type=none
 
 # Automatically update the database schema based on your entity classes
 hibernate.hbm2ddl.auto=update
 
-# Use thread-bound sessions
-hibernate.current_session_context_class=thread
 
-# C3P0 Connection pool settings
-hibernate.c3p0.min_size=5           # Minimum number of connections in the pool
-hibernate.c3p0.max_size=20          # Maximum number of connections in the pool
-hibernate.c3p0.timeout=300          # Idle connections removed after 300 seconds
-hibernate.c3p0.max_statements=50    # Statement cache size
-hibernate.c3p0.idle_test_period=3000  # Test idle connections every 3000 seconds
-hibernate.c3p0.acquire_increment=2  # Number of connections acquired when the pool is exhausted
-hibernate.c3p0.max_idle_time=600    # Maximum idle time before a connection is closed
+# Disable detailed Hibernate logging
+hibernate.generate_statistics=false
+hibernate.use_sql_comments=false
+hibernate.jdbc.batch_versioned_data=false
+
+# Control logging level to avoid excessive output
+org.hibernate.level=INFO
